; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/binutils/gas/config/extr_tc-arm.c_do_neon_qmovun.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/binutils/gas/config/extr_tc-arm.c_do_neon_qmovun.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }
%struct.neon_type_el = type { i32 }

@NS_DQ = common dso_local global i32 0, align 4
@N_EQK = common dso_local global i32 0, align 4
@N_HLF = common dso_local global i32 0, align 4
@N_UNS = common dso_local global i32 0, align 4
@N_S16 = common dso_local global i32 0, align 4
@N_S32 = common dso_local global i32 0, align 4
@N_S64 = common dso_local global i32 0, align 4
@N_KEY = common dso_local global i32 0, align 4
@inst = common dso_local global %struct.TYPE_2__ zeroinitializer, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @do_neon_qmovun to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @do_neon_qmovun() #0 {
  %1 = alloca %struct.neon_type_el, align 4
  %2 = load i32, i32* @NS_DQ, align 4
  %3 = load i32, i32* @N_EQK, align 4
  %4 = load i32, i32* @N_HLF, align 4
  %5 = or i32 %3, %4
  %6 = load i32, i32* @N_UNS, align 4
  %7 = or i32 %5, %6
  %8 = load i32, i32* @N_S16, align 4
  %9 = load i32, i32* @N_S32, align 4
  %10 = or i32 %8, %9
  %11 = load i32, i32* @N_S64, align 4
  %12 = or i32 %10, %11
  %13 = load i32, i32* @N_KEY, align 4
  %14 = or i32 %12, %13
  %15 = call i32 @neon_check_type(i32 2, i32 %2, i32 %7, i32 %14)
  %16 = getelementptr inbounds %struct.neon_type_el, %struct.neon_type_el* %1, i32 0, i32 0
  store i32 %15, i32* %16, align 4
  %17 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @inst, i32 0, i32 0), align 4
  %18 = call i32 @NEON_ENC_INTEGER(i32 %17)
  store i32 %18, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @inst, i32 0, i32 0), align 4
  %19 = getelementptr inbounds %struct.neon_type_el, %struct.neon_type_el* %1, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = sdiv i32 %20, 2
  %22 = call i32 @neon_two_same(i32 0, i32 1, i32 %21)
  ret void
}

declare dso_local i32 @neon_check_type(i32, i32, i32, i32) #1

declare dso_local i32 @NEON_ENC_INTEGER(i32) #1

declare dso_local i32 @neon_two_same(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
